# ceiling-calculator-bot

./: .env.example  .gitignore  README.md  pyproject.toml  todo.txt
.cursor/rules/: rules.mdc
app/: __init__.py  main.py
app/bot/: states.py
app/bot/handlers/: __init__.py  admin.py  calculation.py  start.py
app/bot/keyboards/: __init__.py  inline.py
app/bot/middlewares/: __init__.py  admin_notify.py  logging.py
app/core/: config.py
app/schemas/: __init__.py  calculation.py
app/services/: calculator.py  chat_logger.py  pdf_generator.py
app/templates/messages/: __init__.py  texts.py
app/templates/pdf/: calculation.html  styles.css
app/utils/: callback.py  images.py  user.py  validation.py
